--- a/style.css
+++ b/style.css
@@ -68,3 +68,22 @@ img {
   margin-top: 15%;
   color:#FF0000;
 }
+
+.project-container{
+  margin-top: 20%;
+    display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+span{
+  background: #9370DB;
+  width: 30%;
+  height: 60%;
+  margin: 2%;
+  padding: 2%;
+  font-family: 'Lobster', cursive;
+  color: white;
+  align-items: center;
+}    
